# numberninja

./: .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yaml  github-release.yaml  publish-to-pypi.yaml
src/numberninja/: __init__.py  cli.py
src/numberninja/core/: __init__.py  api.py  filter.py  transactions.py
test/: test_filter_transactions.py  test_transaction.py  utilities.py
test/features/: transaction_overview.feature
test/features/steps/: system.py  transactions.py
test/features/steps/example_data/: basic_set.json
