[project]
name = "numberninja"
description = "A personal bookkeeping application"
authors = [
  { name="René Moll" },
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
	"Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

dependencies = [
  "python-dateutil",
  "py-money>=0.5",
]

[project.optional-dependencies]
dev = [
	"pre-commit",
]
test = [
  "pytest>=8.3",
  "pytest-cov>=5.0"
]
behaviour = [
  "behave"
]

[project.urls]
Homepage = "https://github.com/renemoll/numberninja"
Issues = "https://github.com/renemoll/numberninja/issues"

#
# Entry points
#

[project.scripts]
numberninja-cli = "numberninja:cli"

#
# Build system
#

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "numberninja.__version__"}

#
# Linters
#

[tool.ruff.lint.per-file-ignores]
"test/features/steps/*" = ["F811"]

#
# Testing
#

[tool.coverage]
html.directory = "build/coverage/"
report.show_missing = true
report.fail_under = 90
run.branch = true
run.source = ["numberninja"]

[tool.pytest.ini_options]
addopts = "--verbose --showlocals --cov"
